Add tooltip component for review quality

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "react-simple-star-rating": "^5.1.7"
+        "react-simple-star-rating": "^5.1.7",
+        "react-tooltip": "^5.28.0"
     }
 }
